# dataengineeringformachinelearning

./: .cursorrules  .env.example  .firebaserc  .fossa.yml  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  .semgrepignore  .trivyignore  AGENTS.md  ANTIGRAVITY.md  BOOK.md  CONTRIBUTING.md  DATA.md  LICENSE  RAILWAY.md  README.md  SBOM.md  SCHEDULE.md  SECURITY.md  START.md  THEME.md  WHITEPAPER.md  add_docstrings.py  cleanup-theme.js  docker-compose.telemetry.yml  docker-compose.yml  firebase.json  firestore.rules  package-lock.json  package.json  playwright.config.ts  print_paths.py  pyproject.toml  remove_glow.py  remove_glow_scss.py  (+8 more)
.agents/: AGENTS.md
.changeset/: config.json  consume-viking-ui-from-published.md  steady-viking-ui-stability.md  viking-battlefield-polish.md
.firebase/: hosting.ZnJvbnRlbmQvZGlzdC9mcm9udGVuZC9icm93c2Vy.cache  hosting.bWFya2V0aW5nL2Rpc3Q.cache  hosting.dmlraW5nLXVpLWRvY3MvZGlzdC9icm93c2Vy.cache
.github/workflows/: 30-60-90-automation.yml  chromatic.yml  ci-tests.yml  e2e-smoke.yml  firebase-backend-deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  firebase-viking-ui-docs-deploy.yml  huggingface-space.yml  neon-pull-request-branch.yml  production-deployment-smoke.yml  publish-deml-crypto.yml  publish-deml-event-client.yml  publish-deml-python.yml  publish-deml-rate-limit.yml  publish-deml-storage.yml  publish-viking-ui.yml  purge-cloudflare-cache.yml  quality-gates.yml  renovate.yml  sync-forjd-hf-token.yml  viking-ui-pr-gates.yml  viking-ui-stability.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  check_db.py  check_prod_firestore.py  conftest.py  deml_workers_start.py  dump_schema.py  fly.toml  manage.py  merge_accounts.py  pytest.ini  relay_start.py  requirements.txt  scratch_email.py  scratch_kafka.py  scratch_kafka_send.py  scratch_query.py  scratch_stripe.py  scratch_stripe2.py  scratch_tenant.py  scratch_worker.py  start.py  test_billing.py  test_firestore_db.py  test_tenant.py  update_readme.py
backend/account/: __init__.py  context.py  lifecycle.py  platform.py  test_lifecycle.py
backend/agent/: api.py  kafka_tool.py  llm_agent.py  test_agent.py  test_report_dead_letter.py
backend/billing/: api.py  test_billing.py
backend/config/: api.py  api_auth.py  asgi.py  correlation_middleware.py  csp_middleware.py  csrf_header_auth.py  email.py  headless_rate_limit.py  internal_api.py  middleware.py  settings.py  sitemaps.py  test_auth.py  test_correlation_middleware.py  test_cors_headers.py  test_csp_and_demo_auth.py  test_csrf_header_auth.py  test_email.py  test_headless_rate_limit.py  test_internal_api.py  test_openapi.py  urls.py  views.py
backend/forjd/: __init__.py  angular_compat.py  api.py  body_limit.py  client.py  cutover.py  flags.py  limits.py  live.py  policy.py  provision.py  sealed_telemetry.py  secrets.py  shadow.py  tenancy.py  test_angular_compat.py  (+15 more)
clickhouse/: Dockerfile  clickhouse-config.xml  custom-users.xml  custom-users.yaml  users.xml
config/: clickhouse-config.xml  otel-collector-config.yaml
cpe-guesser/: Dockerfile
dependency-track/: railway.json
dependency-track-frontend/: Dockerfile
docs/: CLEANUP_2026-07-18.md  CUTOVER.md  FLY.md  FORJD_INTEGRATION.md  FORJD_PLATFORM_HANDOFF.md  PRODUCTION_CHECKLIST.md  PRODUCTION_CUTOVER_CHECKLIST.md  PRODUCTION_DEPLOY.md  SECURITY_BROWSER.md  TECHSTACK.md  VERCEL.md  billing.md  conops.md  exports-rustfs.md  features.md  fluxui-ui-style-adoption.md  glossary.md  models_inventory.md  rust-data-plane.md  viking-grid-layout.md  viking-ui-layout-migration.md  viking-ui-release.md  viking-ui-saas-migration.md  viking-ui-style-guide.md
frontend/: .env.example  .env.test  .gitignore  .prettierignore  Dockerfile  MODERNIZATION.md  README.md  angular.json  boneyard.config.json  branded-select-styling.md  cypress.config.mjs  cypress.config.ts  docker-entrypoint.sh  eslint.config.js  fix_grid.js  fix_lint.js  fix_lint2.js  lint_output.txt  nginx.conf  openapi.json  package-lock.json  package.json  set-env.js  test_firestore.ts  test_popup.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vercel.json  vitest.config.ts  vitest.flux-material.config.ts  vitest.viking-ui.config.ts
functions/: .eslintrc.js  check_firestore.js  package-lock.json  package.json
marketing/: .env.example  astro.config.mjs  package-lock.json  package.json
native/macos-app/: Cargo.toml
native/macos-app/src/: agent.rs  app.rs  auth.rs  llm.rs  main.rs  models.rs  store.rs
queue/: Dockerfile
rust/: .env.example  Cargo.toml
rust/deml-daemon/: Cargo.toml  Dockerfile
rust/deml-daemon/src/: config.rs  db.rs  http_server.rs  internode.rs  kafka.rs  main.rs
rust/deml-daemon/src/tasks/: cron_publisher.rs  health_pinger.rs  maintenance.rs  mod.rs  normalizer.rs  outbox_relay.rs
scanner/: Dockerfile  main.py
scripts/: build_macos_installer.sh  build_search_index.py  check_mobile_first.js  chromatic-backend-server.sh  cleanup-theme.sh  deml-cleanup.sh  deml_tooling.py  dump_openapi.py  enforce-theme.js  git_flow.py  migrate_to_viking_ui.py  railway_audit.py  railway_env_cleanup.py  railway_retire_dataplane.py  run_axe.js  run_semgrep.sh  scan_secrets.sh  sync_content.py  sync_design_system.py  sync_fonts.py  sync_huggingface_space.py  sync_viking_ui_version.mjs  sync_widgets.py  test_build_search_index.py  validate_viking_ui_assets.mjs  verify_huggingface_models.py
studio/: README.md  package-lock.json  package.json  tsconfig.json
telemetry/: Dockerfile  otel-collector-config.yaml
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_railway_env_cleanup.py
tor-proxy/: Dockerfile
viking-ui-docs/: .gitignore  AGENTS.md  README.md  angular.json  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.astro.json  tsconfig.json
(+1144 files in other folders)
