[package]
name = "deml-macos"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Native macOS vulnerability triage and AI remediation workbench"
license = "Apache-2.0"

[package.metadata.bundle]
name = "DEML Security Workbench"
identifier = "app.deml.security-workbench"
category = "public.app-category.developer-tools"
short_description = "Local-first vulnerability triage and AI remediation"
osx_minimum_system_version = "13.0"
icon = ["../../frontend/public/web-app-manifest-512x512.png"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
eframe = { version = "0.35", default-features = false, features = ["accesskit", "default_fonts", "glow", "persistence"] }
keyring = { version = "4.1", features = ["v1"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
url = "2.5"
uuid = { version = "1.18", features = ["v4", "serde"] }
webbrowser = "1.0"

[dev-dependencies]
tempfile = "3.20"
