[package]
name = "deml-daemon"
version = "0.1.0"
edition = "2021"
description = "DEML platform background daemon — outbox relay, telemetry consumer, health pinger, cron scheduler"
license = "MIT"

[[bin]]
name = "deml-daemon"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Postgres
sqlx = { version = "0.8", features = [
  "postgres",
  "uuid",
  "time",
  "chrono",
  "json",
  "runtime-tokio-rustls",
] }

# Kafka / Redpanda
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }

# HTTP client — health probes + Django internal API calls
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Concurrent futures (join_all for parallel probes)
futures = "0.3"

# Timestamps for cron trigger payloads
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.33"
opentelemetry = "0.32"
opentelemetry_sdk = "0.32"
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
  "trace",
  "http-proto",
  "reqwest-client",
  "reqwest-rustls-webpki-roots",
] }

# Error handling
anyhow = "1"

# UUIDs (matches Postgres uuid columns)
uuid = { version = "1", features = ["v4", "serde"] }

# Internal HTTP health surface + optional high-throughput ingestion edge
axum = { version = "0.8", features = ["json", "http1", "tokio"] }

# Ingress authentication, chain-of-custody hashing, and Dragonfly rate limiting
sha2 = "0.10"
hex = "0.4"
subtle = "2"
redis = { version = "0.27", features = ["tokio-comp", "script"] }

# URL parsing and SSRF controls for active probes
url = "2"
